--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
 pandas
 numpy
-tensorflow
-scikit-learn>=1.3,<1.5
+tensorflow==2.14.0
+scikit-learn==1.3.2
 openpyxl
 joblib
 python-dateutil
